--- a/ssg/Cargo.toml
+++ b/ssg/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ggapi = "0.2.4"
+chrono = "0.4.38"
+gql_client = "1.0.7"
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
 tokio-macros = "2.3.0"
+urlencoding = "2.1.3"
