--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -5,6 +5,10 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+  paths:
+      - 'site/index.html'
+      - 'site/styles.css'
+      - 'site/script.js'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
