--- a/ssg/Cargo.toml
+++ b/ssg/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+case_converter = "0.1.1"
 chrono = "0.4.38"
 gql_client = "1.0.7"
 regex = "1.10.5"
