--- a/ssg/Cargo.toml
+++ b/ssg/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 case_converter = "0.1.1"
 chrono = "0.4.38"
+chrono-tz = "0.9.0"
 ffmpeg-sidecar = "1.1.0"
 gql_client = "1.0.7"
 regex = "1.10.5"
