--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -9,7 +9,7 @@ on:
       - 'site/index.html'
       - 'site/styles.css'
       - 'site/script.js'
-      - 'site/calendar.ics'
+      # - 'site/calendar.ics'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
