--- a/ssg/Cargo.toml
+++ b/ssg/Cargo.toml
@@ -10,6 +10,7 @@ chrono-tz = "0.9.0"
 ffmpeg-sidecar = "1.1.0"
 gql_client = "1.0.7"
 icalendar = "0.16.1"
+itertools = "0.13.0"
 regex = "1.10.5"
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
