--- a/ssg/Cargo.toml
+++ b/ssg/Cargo.toml
@@ -8,6 +8,7 @@ case_converter = "0.1.1"
 chrono = "0.4.38"
 chrono-tz = "0.9.0"
 ffmpeg-sidecar = "1.1.0"
+fs_extra = "1.3.0"
 gql_client = "1.0.7"
 icalendar = "0.16.1"
 itertools = "0.13.0"
