--- a/ssg/Cargo.toml
+++ b/ssg/Cargo.toml
@@ -7,12 +7,14 @@ edition = "2021"
 case_converter = "0.1.1"
 chrono = "0.4.38"
 chrono-tz = "0.9.0"
+dotenv = "0.15.0"
 ffmpeg-sidecar = "1.1.0"
 fs_extra = "1.3.0"
 gql_client = "1.0.7"
 icalendar = "0.16.1"
 itertools = "0.13.0"
 regex = "1.10.5"
+reqwest = { version = "0.12.7", features = ["json"] }
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
 tokio-macros = "2.3.0"
