--- a/ssg/Cargo.toml
+++ b/ssg/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ansi_term = "0.12.1"
 case_converter = "0.1.1"
 chrono = "0.4.38"
 chrono-tz = "0.9.0"
@@ -13,7 +14,7 @@ fs_extra = "1.3.0"
 gql_client = "1.0.7"
 icalendar = "0.16.1"
 itertools = "0.13.0"
-mailerlite-rs = "1.0.0"
+mailerlite-rs = { git = "https://github.com/nathanbabcock/mailerlite-rust.git" }
 regex = "1.10.5"
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
