--- a/ssg/Cargo.toml
+++ b/ssg/Cargo.toml
@@ -21,3 +21,4 @@ serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
 tokio-macros = "2.3.0"
 urlencoding = "2.1.3"
+webbrowser = "1.0"
