--- a/ssg/Cargo.toml
+++ b/ssg/Cargo.toml
@@ -17,6 +17,7 @@ icalendar = "0.16.1"
 itertools = "0.13.0"
 regex = "1.10.5"
 reqwest = { version = "0.12.8", features = ["json"] }
+scraper = "0.22.0"
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
 tokio-macros = "2.3.0"
